--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,11 @@
+:root {
+    --main-text-align: center;
+    --main-height: auto;
+    --main-color: darkblue;
+}
+
 nav {
-    background-color: darkblue;
+    background-color: var(--main-color);
     padding: 10px;
 }
 
@@ -10,12 +16,12 @@ nav a {
 }
 
 h1 {
-    color: darkblue;
+    color: var(--main-color);
 }
 
 img {
     width: 150px;
-    height: auto;
+    height: var(--main-height);
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
@@ -36,17 +42,17 @@ aside {
     padding: 1rem;
     background-color: #eee ;
     color: #333;
-    text-align: center;
+    text-align: var(--main-text-align);
 }
 
 aside img {
     width: 200px;
-    height: auto;
+    height: var(--main-height);
 }
 
 main img {
     width: 150px;
-    height: auto;
+    height: var(--main-height);
 }
 
 p { padding: 0;}
@@ -54,5 +60,5 @@ p { padding: 0;}
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
-    text-align: center;
+    text-align: var(--main-text-align);
 }
