--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -70,9 +70,9 @@ a {
     display: inline-block;
     padding: 10px 20px;
     margin: 5px;
-    border: 2px solid #464c4e;
+    border: 2px solid rgb(173, 216, 230);
     border-radius: 5px; 
-    background-color: rgba(19, 9, 65, 0.479);
+    background-color: rgba(173, 216, 230, 0.8);
     color: var(--black);
     text-align: center;
     transition: background-color 0.3s, color 0.3s;
